--- a/app/src/main/res/layout/maintenancecard.xml
+++ b/app/src/main/res/layout/maintenancecard.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -31,7 +31,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/monthtxt"
+                android:id="@+id/maintenancecard_textview_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24dp"
@@ -55,7 +55,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/yeartxt"
+                android:id="@+id/maintanancecard_textview_year"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24dp"
@@ -83,7 +83,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/txtamt"
+                android:id="@+id/maintainancecard_textview_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24dp"
