--- a/app/src/main/res/layout/activity_add_expense_bill.xml
+++ b/app/src/main/res/layout/activity_add_expense_bill.xml
@@ -13,121 +13,83 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="200sp"
+            android:layout_marginLeft="20sp"
+            android:layout_marginRight="20sp"
+            style="@style/Widget.Material3.CardView.Elevated"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="12dp">
 
-
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/cw"
+            <LinearLayout
                 style="@style/Widget.Material3.CardView.Elevated"
                 android:layout_width="match_parent"
-                android:layout_height="370sp"
-                android:layout_centerInParent="true"
-                android:layout_marginStart="30sp"
-                android:layout_marginTop="300sp"
-                android:background="@color/white"
-                app:cardCornerRadius="15sp">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:weightSum="4"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="12dp">
 
-
-                <TextView
-                    android:id="@+id/txtapartmentname"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="80sp"
-                    android:padding="20sp"
-                    android:text="@string/text_addexpense"
-                    android:textColor="@color/black"
-                    android:textSize="30sp" />
-
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/txtiptblnc"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="120sp"
-                    android:padding="5sp">
+                    android:layout_margin="10sp"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
 
                     <TextView
-                        android:id="@+id/txttotalblnc"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/text_month"
-                        android:textColor="@color/black"
-                        android:textSize="20sp" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/txtiptblnc2"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginLeft="140sp"
-                    android:layout_marginTop="120sp"
-                    android:padding="5sp">
-
-                    <Spinner
-                        android:id="@+id/addbill_spinner_month"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="@string/text_month"
+                        android:textSize="20sp" />
+
+                    <Spinner
+                        android:id="@+id/addexpense_spinner_month"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30sp"
                         android:entries="@array/month" />
 
-                </com.google.android.material.textfield.TextInputLayout>
-
-
+                </LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="155sp"
-                    android:hint="@string/hint_title"
-                    android:padding="5sp"
-                    >
+                    android:layout_margin="10sp"
+                    android:hint="@string/hint_title">
 
                     <EditText
-                        android:id="@+id/addbill_edittext_year"
+                        android:id="@+id/addexpense_edittext_enteryear"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white"
-                        android:textColor="@color/black"
-                        android:textSize="20sp" />
-                </com.google.android.material.textfield.TextInputLayout>
+                        android:layout_height="wrap_content" />
 
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="230sp"
-                    android:hint="@string/hint_amount"
-                    android:padding="5sp">
+                    android:layout_margin="10sp"
+                    android:hint="@string/hint_amount">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/addbill_edittext_amount"
+                    <EditText
+                        android:id="@+id/addexpense_edittext_enteramount"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:textSize="20sp" />
+                        android:layout_height="wrap_content" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
-                    android:id="@+id/addbill_button_add"
+                    android:id="@+id/addexpense_button_addnewbill"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="150sp"
-                    android:layout_marginTop="310sp"
-                    android:backgroundTint="@color/primary_back_blue"
-                    android:text="add"
-                    android:textSize="10sp" />
+                    android:layout_marginStart="100sp"
+                    android:padding="15sp"
+                    android:text="@string/text_expenses" />
 
+            </LinearLayout>
 
-            </com.google.android.material.card.MaterialCardView>
         </RelativeLayout>
     </ScrollView>
 
