--- a/app/src/main/res/layout/activity_expenses.xml
+++ b/app/src/main/res/layout/activity_expenses.xml
@@ -26,7 +26,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/r1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/maintenance_imagebutton_add"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/maintenance_imagebutton_add" />
 </RelativeLayout>
